[tool.poetry]
name = "furum2023"
version = "0.1.0"
description = "Cyberdeck for Furum 2023"
authors = ["Junias Trey <junias@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
cursor = "^1.3.5"
pynput = "^1.7.6"
fpdf = "^1.7.2"
to-ascii = { version = "^6.0.1", optional = true }

[tool.poetry.extras]
convert = ["to-ascii"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
